# rl-bipedal-walking

./: .gitignore  readme.md  requirements.txt  requirements_complete.txt  setup.py
humanoid/algo/ppo/: on_policy_runner.py
humanoid/envs/: __init__.py
humanoid/envs/custom/: h1_config.py  h1_env.py  h1_wholebody_config.py  h1_wholebody_env.py  humanoid_config.py
humanoid/scripts/: sim2sim.py
humanoid/utils/: helpers.py
humanoid_descriptions/: README.md
ros2_ws/src/bipedal_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/bipedal_robot_description/config/: controllers.yaml  rviz_config.rviz
ros2_ws/src/bipedal_robot_description/launch/: gazebo_launch.py  rviz_display.launch.py  spawn_robot.launch,py  spawn_robot.launch.py
ros2_ws/src/bipedal_robot_description/scripts/robot_controller.py/: robot_controller.py
ros2_ws/src/bipedal_robot_description/urdf/: bipedal.urdf
ros2_ws/src/policy_runner/: package.xml  setup.py
ros2_ws/src/policy_runner/config/: h1_joints.yaml  xbot_joints.yaml
ros2_ws/src/policy_runner/launch/: policy_runner.launch.py
ros2_ws/src/policy_runner/policy_runner/: policy_inference_node.py
ros2_ws/worlds/: empty_world.world
scripts/: eval_sac.sh  install_dependencies.sh  install_gazebo_deps.sh  launch_gazebo.sh  test_policy.sh  train.sh  train_sac.sh
src/rl_bipedal_walking/: setup.py
src/rl_bipedal_walking/agents/: __init__.py  ppo_agent.py  sac_agent.py
src/rl_bipedal_walking/environments/: bipedal_env.py  mujoco_env.py
src/rl_bipedal_walking/evaluation/: evaluate_model.py  play_sac.py
src/rl_bipedal_walking/training/: train_sac.py  train_walker.py
